@@ -3,6 +3,10 @@ package com.example.demo.levels;
 import com.example.demo.actors.ActiveActorDestructible;
 import com.example.demo.actors.FighterPlane;
 import com.example.demo.actors.UserPlane;
+import com.example.demo.handlers.CollisionHandler;
+import com.example.demo.handlers.InputHandler;
+import com.example.demo.handlers.PauseHandler;
+import com.example.demo.handlers.GameInitializer;
 import com.example.demo.view.LevelView;
 import javafx.animation.KeyFrame;
 import javafx.animation.Timeline;
@@ -17,7 +21,11 @@ import javafx.scene.shape.Rectangle;
 import javafx.util.Duration;
 
 import java.util.*;
+		import java.util.stream.Collectors;
 
+/**
+ * Represents a parent class for all levels in the game.
+ */
 public abstract class LevelParent {
 
 	private static final double SCREEN_HEIGHT_ADJUSTMENT = 150;
@@ -38,14 +46,24 @@ public abstract class LevelParent {
 	private final List<ActiveActorDestructible> enemyProjectiles;
 
 	private int currentNumberOfEnemies;
-	private final LevelView levelView;
+	private LevelView levelView;
 	private final StringProperty nextLevelProperty = new SimpleStringProperty();
-    private final Map<ActiveActorDestructible, Rectangle> actorHitboxes = new HashMap<>();
+	private final Set<KeyCode> pressedKeys = new HashSet<>();
+	private Map<ActiveActorDestructible, Rectangle> actorHitboxes = new HashMap<>();
 
 	private final CollisionHandler collisionHandler;
 	private final InputHandler inputHandler;
 	private final PauseHandler pauseHandler;
+	private final GameInitializer gameInitializer;
 
+	/**
+	 * Constructs a LevelParent with the specified parameters.
+	 *
+	 * @param backgroundImageName the name of the background image.
+	 * @param screenHeight the height of the screen.
+	 * @param screenWidth the width of the screen.
+	 * @param playerInitialHealth the initial health of the player.
+	 */
 	public LevelParent(String backgroundImageName, double screenHeight, double screenWidth, int playerInitialHealth) {
 		this.root = new Group();
 		this.scene = new Scene(root, screenWidth, screenHeight);
@@ -63,43 +81,76 @@ public abstract class LevelParent {
 		this.levelView = instantiateLevelView();
 		this.currentNumberOfEnemies = 0;
 		this.collisionHandler = new CollisionHandler();
-        Set<KeyCode> pressedKeys = new HashSet<>();
-        this.inputHandler = new InputHandler(pressedKeys, user, background, root, userProjectiles);
+		this.inputHandler = new InputHandler(pressedKeys, user, background, root, userProjectiles);
 		this.pauseHandler = new PauseHandler(scene, this::pauseGame, this::resumeGame);
+		this.gameInitializer = new GameInitializer(root, scene, background, user, levelView, pauseHandler);
 		initializeTimeline();
 		friendlyUnits.add(user);
 	}
 
+	/**
+	 * Initializes the friendly units in the level.
+	 */
 	protected abstract void initializeFriendlyUnits();
 
+	/**
+	 * Checks if the game is over.
+	 */
 	protected abstract void checkIfGameOver();
 
+	/**
+	 * Spawns enemy units in the level.
+	 */
 	protected abstract void spawnEnemyUnits();
 
+	/**
+	 * Instantiates the view for the level.
+	 *
+	 * @return the view for the level.
+	 */
 	protected abstract LevelView instantiateLevelView();
 
+	/**
+	 * Initializes the scene for the level.
+	 *
+	 * @return the initialized scene.
+	 */
 	public Scene initializeScene() {
-		initializeBackground();
-		pauseHandler.initializePauseHandler();
-		initializeFriendlyUnits();
-		levelView.showHeartDisplay();
-		levelView.showKillCountDisplay();
+		gameInitializer.initializeGame();
+		inputHandler.initializeFireProjectileHandler();
 		return scene;
 	}
 
+	/**
+	 * Starts the game.
+	 */
 	public void startGame() {
 		background.requestFocus();
 		timeline.play();
 	}
 
+	/**
+	 * Advances to the next level.
+	 *
+	 * @param nextLevelClassName the class name of the next level.
+	 * @param nextLevelName the name of the next level.
+	 */
 	protected void goToNextLevel(String nextLevelClassName, String nextLevelName) {
 		nextLevelProperty.set(nextLevelClassName + "," + nextLevelName);
 	}
 
+	/**
+	 * Returns the property for the next level.
+	 *
+	 * @return the property for the next level.
+	 */
 	public StringProperty nextLevelProperty() {
 		return nextLevelProperty;
 	}
 
+	/**
+	 * Updates the scene.
+	 */
 	private void updateScene() {
 		spawnEnemyUnits();
 		updateActors();
@@ -116,24 +167,27 @@ public abstract class LevelParent {
 		inputHandler.updateUserPlaneMovement();
 	}
 
+	/**
+	 * Initializes the timeline for the game loop.
+	 */
 	private void initializeTimeline() {
 		timeline.setCycleCount(Timeline.INDEFINITE);
 		KeyFrame gameLoop = new KeyFrame(Duration.millis(MILLISECOND_DELAY), e -> updateScene());
 		timeline.getKeyFrames().add(gameLoop);
 	}
 
-	private void initializeBackground() {
-		background.setFocusTraversable(true);
-		background.setFitHeight(screenHeight);
-		background.setFitWidth(screenWidth);
-		inputHandler.initializeFireProjectileHandler();
-		root.getChildren().add(background);
-	}
-
+	/**
+	 * Generates enemy fire.
+	 */
 	private void generateEnemyFire() {
 		enemyUnits.forEach(enemy -> spawnEnemyProjectile(((FighterPlane) enemy).fireProjectile()));
 	}
 
+	/**
+	 * Spawns an enemy projectile.
+	 *
+	 * @param projectile the enemy projectile to spawn.
+	 */
 	private void spawnEnemyProjectile(ActiveActorDestructible projectile) {
 		if (projectile != null) {
 			root.getChildren().add(projectile);
@@ -141,6 +195,9 @@ public abstract class LevelParent {
 		}
 	}
 
+	/**
+	 * Updates the actors in the level.
+	 */
 	private void updateActors() {
 		friendlyUnits.forEach(plane -> {
 			plane.updateActor();
@@ -160,6 +217,11 @@ public abstract class LevelParent {
 		});
 	}
 
+	/**
+	 * Adds a hitbox to the scene for the specified actor.
+	 *
+	 * @param actor the actor to add a hitbox for.
+	 */
 	private void addHitboxToScene(ActiveActorDestructible actor) {
 		if (actorHitboxes.containsKey(actor)) {
 			root.getChildren().remove(actorHitboxes.get(actor));
@@ -169,6 +231,9 @@ public abstract class LevelParent {
 		root.getChildren().add(hitbox);
 	}
 
+	/**
+	 * Removes all destroyed actors from the scene.
+	 */
 	private void removeAllDestroyedActors() {
 		removeDestroyedActors(friendlyUnits);
 		removeDestroyedActors(enemyUnits);
@@ -176,15 +241,23 @@ public abstract class LevelParent {
 		removeDestroyedActors(enemyProjectiles);
 	}
 
+	/**
+	 * Removes destroyed actors from the specified list.
+	 *
+	 * @param actors the list of actors to remove destroyed actors from.
+	 */
 	private void removeDestroyedActors(List<ActiveActorDestructible> actors) {
 		List<ActiveActorDestructible> destroyedActors = actors.stream()
 				.filter(ActiveActorDestructible::isDestroyed)
-				.toList();
+				.collect(Collectors.toList());
 		root.getChildren().removeAll(destroyedActors);
 		destroyedActors.forEach(actor -> root.getChildren().remove(actorHitboxes.remove(actor)));
 		actors.removeAll(destroyedActors);
 	}
 
+	/**
+	 * Handles enemy penetration.
+	 */
 	private void handleEnemyPenetration() {
 		for (ActiveActorDestructible enemy : enemyUnits) {
 			if (enemyHasPenetratedDefenses(enemy)) {
@@ -194,71 +267,133 @@ public abstract class LevelParent {
 		}
 	}
 
+	/**
+	 * Updates the level view.
+	 */
 	private void updateLevelView() {
 		levelView.removeHearts(user.getHealth());
 		levelView.updateKillCount(user.getKillCount());
 	}
 
+	/**
+	 * Updates the user's kill count.
+	 */
 	private void updateUserKillCount() {
 		for (int i = 0; i < currentNumberOfEnemies - enemyUnits.size(); i++) {
 			user.incrementKillCount();
 		}
 	}
 
+	/**
+	 * Checks if an enemy has penetrated the defenses.
+	 *
+	 * @param enemy the enemy to check.
+	 * @return true if the enemy has penetrated the defenses, false otherwise.
+	 */
 	private boolean enemyHasPenetratedDefenses(ActiveActorDestructible enemy) {
 		return Math.abs(enemy.getTranslateX()) > screenWidth;
 	}
 
+	/**
+	 * Returns the user plane.
+	 *
+	 * @return the user plane.
+	 */
 	protected UserPlane getUser() {
 		return user;
 	}
 
+	/**
+	 * Returns the root group of the scene.
+	 *
+	 * @return the root group of the scene.
+	 */
 	protected Group getRoot() {
 		return root;
 	}
 
+	/**
+	 * Returns the current number of enemies.
+	 *
+	 * @return the current number of enemies.
+	 */
 	protected int getCurrentNumberOfEnemies() {
 		return enemyUnits.size();
 	}
 
+	/**
+	 * Adds an enemy unit to the level.
+	 *
+	 * @param enemy the enemy unit to add.
+	 */
 	protected void addEnemyUnit(ActiveActorDestructible enemy) {
 		enemyUnits.add(enemy);
 		root.getChildren().add(enemy);
 	}
 
+	/**
+	 * Returns the maximum Y position for enemies.
+	 *
+	 * @return the maximum Y position for enemies.
+	 */
 	protected double getEnemyMaximumYPosition() {
 		return enemyMaximumYPosition;
 	}
 
+	/**
+	 * Returns the width of the screen.
+	 *
+	 * @return the width of the screen.
+	 */
 	protected double getScreenWidth() {
 		return screenWidth;
 	}
 
+	/**
+	 * Checks if the user is destroyed.
+	 *
+	 * @return true if the user is destroyed, false otherwise.
+	 */
 	protected boolean userIsDestroyed() {
 		return user.isDestroyed();
 	}
 
+	/**
+	 * Updates the number of enemies.
+	 */
 	private void updateNumberOfEnemies() {
 		currentNumberOfEnemies = enemyUnits.size();
 	}
 
+	/**
+	 * Pauses the game.
+	 */
 	public void pauseGame() {
 		if (!pauseHandler.isPaused()) {
 			timeline.pause();
 		}
 	}
 
+	/**
+	 * Resumes the game.
+	 */
 	public void resumeGame() {
 		if (pauseHandler.isPaused()) {
 			timeline.play();
 		}
 	}
 
+	/**
+	 * Handles winning the game.
+	 */
 	protected void winGame() {
 		timeline.stop();
 		levelView.showWinImage();
 	}
 
+	/**
+	 * Handles losing the game.
+	 */
 	protected void loseGame() {
 		timeline.stop();
 		levelView.showGameOverImage();
